tests/should_fail/fn_wrong_return_type.nv
module main

// SHOULD FAIL: function returns wrong type vs declared return type
fn get_str() -> String {
    return 42
}
println(get_str())
